# madr-api

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  entrypoint.sh  pyproject.toml
madr_api/: app.py  database.py  models.py  schemas.py  security.py  utils.py
madr_api/routers/: accounts.py  auth.py  authors.py  books.py
migrations/: env.py
migrations/versions/: 44139771d541_criando_as_tabelas.py  9a7912c78cbb_create_the_authors_table.py  e33fc479d0b6_create_userwaccounts_table.py
tests/: conftest.py  test_accounts.py  test_app.py  test_auth.py  test_authors.py  test_books.py  test_db.py  test_security.py
